fix: left right shift of content and header on open dropdown menu

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -123,8 +123,13 @@
     }
   body {
     @apply bg-background text-foreground;
+    overflow-y: scroll;
+    }
+  body[data-scroll-locked] {
+    margin-right: 0 !important;
     }
   html {
     @apply font-sans;
+    scrollbar-gutter: stable;
     }
 }
